# opm

./: Cargo.toml  PKGBUILD  README.md
src/: cli.rs  config.rs  dispatcher.rs  install.rs  main.rs  maintenance.rs  package_utils.rs  query.rs  remove.rs  utils.rs
