[package]
name = "opm"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "opm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
serde = { version = "1.0.222", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.22.0"

